--- a/assets/css/componentes/input.css
+++ b/assets/css/componentes/input.css
@@ -2,7 +2,7 @@
   background-color: var(--branco);
   border: none;
   box-sizing: border-box;
-  border-style: 10px 10px 40px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 30px var(--preto-blur);
   color: inherit;
   font-family: inherit;
   font-size: inherit;
