--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -7,5 +7,10 @@
   --preto-blur: rgba(0, 0, 0, 0.1);
 
   --familia-corpo: 'Montserrat', sans-serif;
+  --familia-titulo-destaque: 'Elsie Swash Caps', serif;
+  --peso-titulo-destaque: 900;
+  --peso-botao: 700;
   --tamanho-corpo: 1rem;
+  --tamanho-titulo: 1.375rem;
+  --tamanho-titulo-destaque: 2rem;
 }
