--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -4,6 +4,7 @@
 body {
   background: url('../../img/fundo-textura.png'), url('../../img/fundo-linhas.png');
   background-position: center;
+  color: var(--cinza);
   font-family: var(--familia-corpo);
   font-size: var(--tamanho-corpo);
 }
@@ -11,4 +12,29 @@ body {
 .container {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.titulo {
+  font-size: var(--tamanho-titulo);
+}
+
+.titulo--destaque {
+  color: var(--preto);
+  display: block;
+  font-family: var(--familia-titulo-destaque);
+  font-size: var(--tamanho-titulo-destaque);
+  font-weight: var(--peso-titulo-destaque);
+  margin: .75rem 0;
+}
+
+.alinhamento--esquerda {
+  text-align: left;
+}
+
+.alinhamento--meio {
+  text-align: center;
+}
+
+.texto {
+  line-height: 26px;
 }
