--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -10,7 +10,9 @@
   --familia-titulo-destaque: 'Elsie Swash Caps', serif;
   --peso-titulo-destaque: 900;
   --peso-botao: 700;
+  --peso-destaque: 700;
   --tamanho-corpo: 1rem;
   --tamanho-titulo: 1.375rem;
   --tamanho-titulo-destaque: 2rem;
+  --tamanho-destaque: 1.375rem;
 }
